--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,5 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    Symfony\Component\Security\Core\User\UserProviderInterface:
+        alias: 'security.user.provider.concrete.app_user_provider'
