--- a/.env
+++ b/.env
@@ -50,3 +50,5 @@ MAILER_DSN=smtp://mrandrianasolo@equance.com:Mar10N!Equ*@smtp.equance.com:465?en
 # Gmail SHOULD NOT be used on production, use it in development only.
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
+TEST_USERNAME=el.ex@yopmail.com
+TEST_PASSWORD=Ww2!
