--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/framework-bundle": "6.3.*",
         "symfony/google-mailer": "6.3.*",
         "symfony/mailer": "6.3.*",
+        "symfony/phpunit-bridge": "^6.3",
         "symfony/property-access": "6.3.*",
         "symfony/property-info": "6.3.*",
         "symfony/runtime": "6.3.*",
@@ -81,6 +82,8 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "symfony/browser-kit": "6.3.*",
         "symfony/maker-bundle": "^1.49"
     }
 }
