--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.3.*",
         "symfony/google-mailer": "6.3.*",
+        "symfony/http-client": "6.3.*",
         "symfony/mailer": "6.3.*",
         "symfony/phpunit-bridge": "^6.3",
         "symfony/property-access": "6.3.*",
