fix/JWT token sur users

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -43,6 +43,7 @@ security:
         - { path: '^/api/deleteBooking/[\d]+', roles: IS_AUTHENTICATED_FULLY }
         - { path: '^/api/editBooking/[\d]+', roles: IS_AUTHENTICATED_FULLY }
         - { path: '^/api/users/[\d]+', roles: IS_AUTHENTICATED_FULLY }
+        - { path: '^/api/users', roles: IS_AUTHENTICATED_FULLY }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
