feature/add user endpoint

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -46,6 +46,7 @@ security:
         - { path: '^/api/users', roles: IS_AUTHENTICATED_FULLY }
         - { path: '^/api/sendAlert25', roles: IS_AUTHENTICATED_FULLY }
         - { path: '^/api/sendAlertToday', roles: IS_AUTHENTICATED_FULLY }
+        - { path: '^/api/addUser', roles: IS_AUTHENTICATED_FULLY }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
