feature/username instead of email

--- a/.env
+++ b/.env
@@ -43,7 +43,8 @@ JWT_PASSPHRASE=Equmtp23
 ###< lexik/jwt-authentication-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://mrandrianasolo@equance.com:Mar10N!Equ*@smtp.equance.com:465?encryption=ssl
+MAILER_DSN=smtp://infra@equance.com:xxxxxxxx@smtp.office365.com:587
+###MAILER_DSN=smtp://infra@equance.com:J0rm!U54Dr!@smtp.office365.com:587
 ###< symfony/mailer ###
 
 ###> symfony/google-mailer ###
